# basic_moving_platform

./: .gitignore  BasicMovingPlatform.cpp  BasicMovingPlatform.h  BasicMovingPlatform_not_implemented.h  BasicMovingPlatform_x86.cpp  CMakeLists.txt  CountingSensor.cpp  CountingSensor.h  Motor.cpp  Motor.h  README.md  common_includes.h  common_macros.h  main.cpp  weak.cpp  weak.h
include/: BasicMovingPlatform.h  CountingSensor.h  Motor.h
src/: CountingSensor.cpp  Motor.cpp
